Hopefully fixed spacing issue in some browsers

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -159,7 +159,7 @@ ul > li {
 .event-info {
   z-index: 105;
   position: relative;
-  width: 440px;
+  width: 450px;
   padding-top: 140px;
   padding-left: 80px;
 }
